# ANDREW

./: .travis.yml  README.md  setup.cfg  setup.py  setup_.py  tox.ini
.gentoo/dev-python/andrew/: andrew-99999.ebuild
config/: andrew_config.ini  norby_config.ini
docs/source/: conf.py  index.rst  utils.rst
norby/: __init__.py  __main__.py  utils.py
src/norby/: __init__.py  __main__.py  utils.py
tests/: __init__.py  test_norby.py
