[metadata]
name = norby
version = 0.0.1-dev
description = Communication via telegram bot when bash command finishes executing
log_description = file: README.md
author = Hendrik Klug
author_email = klugh@ethz.ch
url = https://github.com/Jimmy2027/NORBY

keywords =
    python-telegram-bot
    job-utilities
    automatic-notification

provides = mimic

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
package_dir =
    = src
install_requires =
    requests
    subprocess-tee

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    norby = norby.__main__:main